Fix profile page going out of bounds

--- a/src/components/css/mainnav.css
+++ b/src/components/css/mainnav.css
@@ -23,3 +23,7 @@ textarea:focus, textarea.active.focus {
     outline: none !important;
     box-shadow: none !important;
 }
+
+.brand:hover {
+    color: white
+}
